bug 851547 - Make Gamepad API preffable. r=smaug