dom/webidl/GamepadEvent.webidl
@@ -4,7 +4,9 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
-[Constructor(DOMString type, optional GamepadEventInit eventInitDict), HeaderFile="GeneratedEventClasses.h"]
+[Pref="dom.gamepad.enabled",
+ Constructor(DOMString type, optional GamepadEventInit eventInitDict),
+ HeaderFile="GeneratedEventClasses.h"]
 interface GamepadEvent : Event
 {
   readonly attribute Gamepad? gamepad;
